# rtsp

video_rtsp_single/: CMakeLists.txt  main.cpp
